feat: Add toggle-highlight button

--- a/sidebar/sidebar.html
+++ b/sidebar/sidebar.html
@@ -9,6 +9,8 @@
   <body>
     <h1>Save or Load Highlights</h1>
 
+    <button id="toggle">Turn On</button>
+
     <button id="save">Save</button>
 
     <button id="save">    
