--- a/sidebar/sidebar.html
+++ b/sidebar/sidebar.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="sidebar.css" />
     <title>My First Webpage</title>
+    <script src="/external/lodash.js"></script>
   </head>
 
   <body>
